test/sema/typeck/literal/int32-neg-overflow.out
error: number does not fit into type Int32.
--> int32-neg-overflow.dora:1:20
 | fn f() { let _x = -2147483649i32; }
                      ~~~~~~~~~~~~~
 | 
1 error found.
